force-app/core/default/objects/XC_AFCC_Usage_Staging__c/XC_AFCC_Usage_Staging__c.object-meta.xml
<CustomObject>
    <label>Usage Staging</label>
    <nameField>
        <displayFormat>US-{000000}</displayFormat>
        <label>XC AFCC Usage Staging</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Staging Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>