force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Action_Count__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Action_Count__c</fullName>
    <label>Action Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>