force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Billing_Model__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Billing_Model__c</fullName>
    <label>Billing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLEX_CREDITS</fullName>
            </value>
            <value>
                <fullName>CONVERSATIONS</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>