force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Case_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Case_Id_Text__c</fullName>
    <label>Case Id Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>