force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Case_Number__c</fullName>
    <label>Case Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>