force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Case_Outcome__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Case_Outcome__c</fullName>
    <label>Case Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RESOLVED</fullName>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>DEFERRED</fullName>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>ESCALATED</fullName>
                <label>Escalated</label>
            </value>
            <value>
                <fullName>ABANDONED</fullName>
                <label>Abandoned</label>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>