force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Channel__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Channel__c</fullName>
    <label>Channel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>