force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Credits_Used__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Credits_Used__c</fullName>
    <label>Credits Used</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>