force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Import_Run__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Import_Run__c</fullName>
    <label>Import Run</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>XC_AFCC_Import_Run__c</referenceTo>
    <relationshipLabel>Import Run</relationshipLabel>
    <relationshipName>XC_AFCC_UsageStagingRows</relationshipName>
    <type>Lookup</type>
</CustomField>