force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Processing_Error__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Processing_Error__c</fullName>
    <label>Processing Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>