force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>PROCESSED</fullName>
                <label>Processed</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>SKIPPED</fullName>
                <label>Skipped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>