force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Queue_Name__c</fullName>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>