force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Raw_Payload__c</fullName>
    <label>Raw Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>