force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <length>255</length>
    <type>Text</type>
    <externalId>true</externalId>
</CustomField>