force-app/core/default/objects/XC_AFCC_Usage_Staging__c/fields/XC_AFCC_Source_System__c.field-meta.xml
<CustomField>
    <fullName>XC_AFCC_Source_System__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV_IMPORT</fullName>
            </value>
            <value>
                <fullName>SYNTHETIC</fullName>
            </value>
            <value>
                <fullName>LIVE</fullName>
            </value>
            <value>
                <fullName>MANUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>